// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing customerReducer When event is CREATE_CUSTOMER, it should add the new customer to list  1`] = `
Array [
  Object {
    "DOB": "11/03/1950",
    "first_name": "Ross",
    "id": 1,
    "last_name": "Geller",
  },
  Object {
    "DOB": "01/06/1955",
    "first_name": "Rachel",
    "id": 2,
    "last_name": "Green",
  },
  Object {
    "DOB": "3/5/1977",
    "first_name": "John",
    "id": 3,
    "last_name": "Doe",
  },
]
`;

exports[`Testing customerReducer When event is DELETE_CUSTOMER, it should delete the item from the list 1`] = `
Array [
  Object {
    "DOB": "01/06/1955",
    "first_name": "Rachel",
    "id": 2,
    "last_name": "Green",
  },
]
`;

exports[`Testing customerReducer When event is EDIT_CUSTOMER, it should delete the item from the list 1`] = `
Array [
  Object {
    "DOB": "5/7/1967",
    "first_name": "Tom",
    "id": 1,
    "last_name": "Cruz",
  },
  Object {
    "DOB": "01/06/1955",
    "first_name": "Rachel",
    "id": 2,
    "last_name": "Green",
  },
]
`;
